# deepwiki-to-md-gui

./: README.md  pyproject.toml
docs/: DEVELOPMENT.md
scripts/: build_windows.ps1
src/domain/: entities.py  export_models.py  url_parser.py
src/gateway/: file_adapter.py  html_adapter.py  web_adapter.py
src/interface/: bootstrap.py  gui_app.py  gui_worker.py
src/repository/: html_repository.py  markdown_repository.py
src/usecase/: chat_page_usecase.py  wiki_site_usecase.py
test/size_M/: test_bootstrap.py
test/size_S/: test_export_models.py  test_gui_app.py  test_html_adapter.py  test_markdown_repository.py  test_url_parser.py
