[project]
name = "deepwiki-to-md-gui"
version = "0.1.0"
description = "DeepWiki content exporter with a Windows GUI"
authors = [
    { name = "nzwl2020", email = "nzwl2020@outlook.com" }
]
dependencies = [
    "playwright>=1.52.0",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "markdownify>=1.1.0",
    "PySide6>=6.8.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.gui-scripts]
deepwiki-to-md-gui = "src.interface.gui_app:main"

[project.optional-dependencies]
desktop-build = [
    "pyinstaller>=6.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=25.1.1",
    "ruff>=0.11.9",
    "pytest>=8.3.5",
    "pytest-playwright>=0.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
